--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "IMPORTANT": "FILL IN THE 4 NEXT PARAMETERS, OTHERWISE SOME THINGS MAY OR MAY NOT WORK COOKIE IS IMPORTNAT!",
   
-  "token": "ODk0Mjk0ODAyMjY1NDExNjc0.YVn68A.AGYZGbtuZ1FCGAjMnd0G4F_rp-k",
+  "token": ".",
   "prefix": "p!",
   "cookie": "Youtube_Cookie",
 
