--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "IMPORTANT": "FILL IN THE 4 NEXT PARAMETERS, OTHERWISE SOME THINGS MAY OR MAY NOT WORK COOKIE IS IMPORTNAT!",
   
-  "token": "",
+  "token": "ODk0Mjk0ODAyMjY1NDExNjc0.YVn68A.NWD-x2Tb5_32zoj77XkOM1aAPdA",
   "prefix": "p!",
   "cookie": "Youtube_Cookie",
 
